Fix search input style on iOS Safari

--- a/sass/forms/_fields.scss
+++ b/sass/forms/_fields.scss
@@ -28,6 +28,14 @@ textarea {
 	}
 }
 
+input[type="search"] {
+	-webkit-appearance: none;
+	outline-offset: 0;
+	&::-webkit-search-decoration {
+		display: none;
+	}
+}
+
 select {
 
 }
